# ggez-multiplayer

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  input.rs  main.rs
ggezmulti/: Cargo.toml
ggezmulti/src/: lib.rs  messages.rs
libmultiplayer/: Cargo.toml
libmultiplayer/src/: messages.rs
server/: Cargo.toml  resources
server/src/: actions.rs  error.rs  gamestate.rs  handlers.rs  main.rs
