[package]
name = "game-client"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggezmulti = { path = "../ggezmulti" }
ggez = "0.5.1"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", branch = "devel"}
clap = "2"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
websocket = "0.26.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
