[package]
name = "game-server"
version = "0.1.0"
authors = ["d <d@kasofsk.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggezmulti = { path = "../ggezmulti" }
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
rand = "0.7.3"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
